--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
         <link rel="apple-touch-icon" href="/logo192.png" />
         <link rel="manifest" href="/manifest.json" />
-        <meta name="theme-color" content="#F0F4F8" />
+        <meta name="theme-color" content="#eceff1" />
         <meta name="description" content="柳比歇夫" />
         <title>柳比歇夫</title>
     </head>
