fix: no scroll on events page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
         <link rel="apple-touch-icon" href="/logo192.png" />
         <link rel="manifest" href="/manifest.json" />
-        <meta name="theme-color" content="#eceff1" />
+        <meta name="theme-color" content="#f6f6f7" />
         <meta name="description" content="柳比歇夫" />
         <title>柳比歇夫</title>
     </head>
